<resources>
    <string name="app_name">SMW Quiz</string>

    <string name="backend_address">http://169.254.35.14:8080</string>

    <string name="welcome">Willkommen bei unserem SMW Quiz</string>
    <string name="quiz_starter">Hier geht es zum Quiz</string>
    <string name="show_statistics">Statisitk</string>
    <string name="questionSettings">Einstellungen</string>

    <string name="title_activity_settings">Einstellungen</string>

    <string name="preference_category_user">Benutzer</string>
    <string name ="preference_category_user_key">user</string>

    <string name="preference_age">Dein Alter</string>
    <string name="preference_age_key">alter</string>
    <string name="preference_age_summary">Bitte lege dein Alter fest</string>

    <string name="preference_gender">Dein Geschlecht</string>
    <string name="preference_gender_key">geschlecht</string>
    <string name="preference_gender_summary">Bitte lege dein Geschlecht fest</string>

    <string name = "preference_category_quiz">Quiz</string>
    <string name = "preference_category_quiz_key">quiz</string>

    <string name="preference_number_of_questions">Anzahl Fragen</string>
    <string name="preference_number_of_questions_key">anzahl_fragen</string>
    <string name="preference_number_of_questions_summary">Wie viele Fragen möchtest du haben?</string>
    <string name="preference_number_of_questions_default">10</string>

    <string name="preference_number_of_response_possibilities">Anzahl Antwortmöglichkeiten</string>
    <string name="preference_number_of_response_possibilities_key">anzahl antworten</string>
    <string name="preference_number_of_response_possibilities_summary">Wie viele Antwortmöglichkeiten möchtest du haben?</string>
    <string name="preference_number_of_response_possibilities_default">4</string>

    <string name= "ready">Fertig!</string>

</resources>
