<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title ="@string/preference_category_user"
        android:key = "@string/preference_category_user_key">

        <ListPreference
            android:title="@string/preference_age"
            android:key="@string/preference_age_key"
            android:summary="@string/preference_age_summary"
            android:entries="@array/ageList"
            android:entryValues="@array/ageList"
            android:defaultValue="20-30"/>

        <ListPreference
            android:title = "@string/preference_gender"
            android:summary ="@string/preference_gender_summary"
            android:key = "@string/preference_gender_key"
            android:entries= "@array/genderList"
            android:entryValues="@array/genderList"
            android:defaultValue="keine Angabe"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title ="@string/preference_category_quiz"
        android:key = "@string/preference_category_quiz_key">

        <ListPreference
            android:title="@string/preference_number_of_questions"
            android:key="@string/preference_number_of_questions_key"
            android:summary="@string/preference_number_of_questions_summary"
            android:entries="@array/numberOfQuestionsList"
            android:entryValues="@array/numberOfQuestionsList"
            android:defaultValue="10"/>

        <ListPreference
            android:title = "@string/preference_number_of_response_possibilities"
            android:summary ="@string/preference_number_of_response_possibilities_summary"
            android:key = "@string/preference_number_of_response_possibilities_key"
            android:entries= "@array/answerPossibilitiesNamesList"
            android:entryValues="@array/answerPossibilitiesList"
            android:defaultValue="4"/>

    </PreferenceCategory>
</PreferenceScreen>