<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:text="@string/quiz_starter"
        android:layout_width="match_parent"
        android:id="@+id/quizButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="150dp" />

    <Button
        android:text="@string/show_statistics"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/statisticButton" />
</LinearLayout>